--- a/package.json
+++ b/package.json
@@ -16,16 +16,26 @@
     "start": "nwb serve-react-demo",
     "test": "nwb test-react",
     "test:coverage": "nwb test-react --coverage",
-    "test:watch": "nwb test-react --server"
+    "test:watch": "nwb test-react --server",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-  "dependencies": {},
+  "dependencies": {
+    "nwb-sass": "^0.8.0",
+    "react-css-themr": "^2.1.2"
+  },
   "peerDependencies": {
     "react": "15.x"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "nwb": "0.16.x",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1"
   },
   "author": "",
   "homepage": "",
