--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-ui",
-  "version": "1.0.0",
-  "description": "react-ui React component",
+  "name": "react-primer",
+  "version": "0.0.1",
+  "description": "react-primer React component",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -21,7 +21,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "nwb-sass": "^0.8.0",
     "react-css-themr": "^2.1.2"
   },
   "peerDependencies": {
@@ -29,13 +28,15 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.21.0",
-    "nwb": "0.16.x",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1"
+    "eslint-plugin-react": "^7.0.1",
+    "nwb-sass": "^0.8.0",
+    "nwb": "0.16.x",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
   "author": "",
   "homepage": "",
