--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "react": "15.x"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
@@ -36,7 +35,8 @@
     "nwb-sass": "^0.8.0",
     "nwb": "0.16.x",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "@kadira/storybook": "^2.21.0"
   },
   "author": "",
   "homepage": "",
