--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "react-css-themr": "^2.1.2"
+    "react-css-themr": "^2.1.2",
+    "react-fela": "^5.0.3"
   },
   "peerDependencies": {
     "react": "15.x"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "nwb-sass": "^0.8.0",
     "nwb": "0.16.x",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "@kadira/storybook": "^2.21.0"
+    "react-dom": "^15.5.4"
   },
   "author": "",
   "homepage": "",
