--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "react-css-themr": "^2.1.2",
-    "react-fela": "^5.0.3"
+    "fela": "^5.0.1",
+    "fela-plugin-placeholder-prefixer": "^5.0.1",
+    "fela-plugin-prefixer": "^5.0.1",
+    "react-css-themr": "^2.1.2"
   },
   "peerDependencies": {
     "react": "15.x"
@@ -36,7 +38,9 @@
     "eslint-plugin-react": "^7.0.1",
     "nwb": "0.16.x",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-fela": "^5.0.3",
+    "storybook-addon-props-fela": "^1.0.3"
   },
   "author": "",
   "homepage": "",
