--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react": "15.x"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
+    "@storybook/addon-knobs": "^3.1.2",
+    "@storybook/addon-options": "^3.1.2",
+    "@storybook/react": "^3.1.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
