--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "react": "15.x"
   },
   "devDependencies": {
-    "@storybook/addon-knobs": "^3.1.2",
-    "@storybook/addon-options": "^3.1.2",
-    "@storybook/react": "^3.1.3",
+    "@storybook/addon-knobs": "^3.1.5",
+    "@storybook/addon-options": "^3.1.5",
+    "@storybook/react": "^3.1.5",
+    "storybook-addon-props-fela": "^1.0.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
@@ -41,8 +42,7 @@
     "nwb": "0.16.x",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-fela": "^5.0.3",
-    "storybook-addon-props-fela": "^1.0.3"
+    "react-fela": "^5.0.3"
   },
   "author": "",
   "homepage": "",
