--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fela": "^5.0.1",
     "fela-plugin-placeholder-prefixer": "^5.0.1",
     "fela-plugin-prefixer": "^5.0.1",
+    "modularscale-js": "^3.0.1",
     "react-css-themr": "^2.1.2"
   },
   "peerDependencies": {
@@ -33,7 +34,6 @@
     "@storybook/addon-knobs": "^3.1.5",
     "@storybook/addon-options": "^3.1.5",
     "@storybook/react": "^3.1.5",
-    "storybook-addon-props-fela": "^1.0.3",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "^2.3.0",
@@ -42,7 +42,8 @@
     "nwb": "0.16.x",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-fela": "^5.0.3"
+    "react-fela": "^5.0.3",
+    "storybook-addon-props-fela": "^1.0.3"
   },
   "author": "",
   "homepage": "",
