--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fela-plugin-fallback-value": "^5.0.3",
     "fela-plugin-placeholder-prefixer": "^5.0.2",
     "fela-plugin-prefixer": "^5.0.3",
+    "lodash": "^4.17.4",
     "modularscale-js": "^3.0.1",
     "react-css-themr": "^2.1.2"
   },
