--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "dependencies": {
     "fela": "^6.0.5",
-    "fela-plugin-fallback-value": "^5.0.14",
-    "fela-plugin-placeholder-prefixer": "^5.0.14",
-    "fela-plugin-prefixer": "^5.0.14",
+    "fela-plugin-fallback-value": "^5.0.15",
+    "fela-plugin-placeholder-prefixer": "^5.0.15",
+    "fela-plugin-prefixer": "^5.0.15",
+    "imagesloaded": "^4.1.3",
     "masonry-layout": "^4.2.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
