--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-primer",
+  "name": "@mmintel/react-primer",
   "version": "0.0.1",
   "description": "react-primer React component",
   "main": "lib/index.js",
