--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "classnames": "^2.2.5",
     "fela": "^6.0.5",
     "fela-plugin-fallback-value": "^5.0.15",
     "fela-plugin-placeholder-prefixer": "^5.0.15",
     "fela-plugin-prefixer": "^5.0.15",
     "imagesloaded": "^4.1.3",
     "masonry-layout": "^4.2.0",
+    "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-fela": "^6.1.0",
@@ -44,7 +46,8 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "nwb": "^0.19.2",
-    "react-icons": "^2.2.7"
+    "react-icons": "^2.2.7",
+    "storybook-addon-jsx": "^5.3.0"
   },
   "author": "",
   "homepage": "",
