--- a/package.json
+++ b/package.json
@@ -22,18 +22,19 @@
   },
   "dependencies": {
     "classnames": "^2.2.5",
+    "color": "^2.0.1",
     "fela": "^6.0.5",
     "fela-plugin-fallback-value": "^5.0.15",
     "fela-plugin-placeholder-prefixer": "^5.0.15",
     "fela-plugin-prefixer": "^5.0.15",
     "imagesloaded": "^4.1.3",
     "masonry-layout": "^4.2.0",
+    "modularscale-js": "^3.0.1",
     "prop-types": "^15.6.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-fela": "^6.1.0",
-    "react-motion": "^0.5.2",
-    "storybook-addon-props-fela": "^1.0.3"
+    "react-motion": "^0.5.2"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.16",
@@ -46,8 +47,7 @@
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
     "nwb": "^0.19.2",
-    "react-icons": "^2.2.7",
-    "storybook-addon-jsx": "^5.3.0"
+    "react-icons": "^2.2.7"
   },
   "author": "",
   "homepage": "",
