--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "classnames": "^2.2.5",
     "color": "^2.0.1",
     "fela": "^6.1.3",
-    "imagesloaded": "^4.1.3",
+    "imagesloaded": "^4.1.4",
+    "lodash": "^4.17.5",
     "masonry-layout": "^4.2.0",
     "modularscale-js": "^3.0.1",
     "prop-types": "^15.6.0",
